<resources>
    <string name="app_name">Taskes</string>

    <string name="title_onboarding">Onboarding</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_edit">Edit profile</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="your_name">Your name</string>
    <string name="your_description">Your description</string>

    <string name="fill_this_field">Заполните это поле</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="edit_profile">Edit profile</string>

    <string name="delete_title">Удалить</string>
    <string name="delete_message">Вы действительно хотите удалить?</string>
    <string name="delete_pos">Да</string>
    <string name="delete_neg">Нет</string>

    <string name="default_start_number">+996</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="change_profile_image">Change profile image</string>
</resources>